/v1 updates and doc fixes
