# auth/auth.go
@@ -20,6 +20,8 @@ import (
 	"github.com/ethereum/go-ethereum/crypto"
 	"github.com/golang-jwt/jwt/v4"
 	"github.com/gorilla/mux"
+
+	_ "rest-go-demo/docs"
 )
 
 var (
@@ -130,6 +132,16 @@ func (p RegisterPayload) Validate() error {
 	return nil
 }
 
+// RegisterHandler godoc
+// @Summary Register Wallet Address for the first time, one-time operation
+// @Description This is a one-time operation, maybe could be combined into the nonce-generating call.  Basically places a wallet address
+// @Description into the database for further use.  Only the "address" field is needed for input here in the AuthUser struct.
+// @Tags Auth
+// @Accept  json
+// @Produce json
+// @Param message body Authuser true "address input in json format"
+// @Success 200 {integer} int
+// @Router /register [post]
 func RegisterHandler() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		requestBody, _ := ioutil.ReadAll(r.Body)
@@ -163,6 +175,16 @@ func RegisterHandler() http.HandlerFunc {
 	}
 }
 
+// UserNonceHandler godoc
+// @Summary If the current wallet doesn't have a valid local JWT, need to request a new nonce to sign
+// @Description As part of the login process, we need a user to sign a nonce genrated from the API, to prove the user in fact
+// @Description the owner of the wallet they are siging in from.  JWT currently set to 24 hour validity (could change this upon request)
+// @Tags Auth
+// @Accept  json
+// @Produce json
+// @Param address path string true "wallet address to get nonce to sign"
+// @Success 200 {} Authuser
+// @Router /users/{address}/nonce [get]
 func UserNonceHandler() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		vars := mux.Vars(r)
@@ -210,6 +232,17 @@ func (s SigninPayload) Validate() error {
 	return nil
 }
 
+// SigninHandler godoc
+// @Summary Sign In with signed nonce value, currently JWT token returned should be valid for 24 hours
+// @Description Every call the to API after this signin should present the JWT Bearer token for authenticated access.
+// @Description Upon request we can change the timeout to greater than 24 hours, or setup an addtional dedicated API for
+// @Description an agreed upon development and maintenance cost
+// @Tags Auth
+// @Accept  json
+// @Produce json
+// @Param message body SigninPayload true "json input containing signed nonce"
+// @Success 200 {integer} int
+// @Router /signin [post]
 func SigninHandler(jwtProvider *JwtHmacProvider) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		var p SigninPayload
